--- a/packages/class-variance-authority/package.json
+++ b/packages/class-variance-authority/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-variance-authority",
+  "name": "@albertojrigail/class-variance-authority",
   "version": "0.6.0",
   "description": "Class Variance Authority 🧬",
   "keywords": [
@@ -20,16 +20,6 @@
   "funding": "https://joebell.co.uk",
   "license": "Apache-2.0",
   "author": "Joe Bell (https://joebell.co.uk)",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./types": {
-      "types": "./dist/types.d.ts"
-    }
-  },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "./dist/index.d.ts",
